--- a/itsupport_backend/package.json
+++ b/itsupport_backend/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.2.0",
     "express": "^4.17.1",
     "joi": "^13.1.0",
-    "nodemailer": "^6.4.14"
+    "nodemailer": "^6.4.14",
+    "vue-loading-overlay": "^3.4.2"
   }
 }
