--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.4.2"
   },
   "devDependencies": {
