--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-loading-overlay": "^3.4.2",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.4.2"
   },
   "devDependencies": {
